# thermal-anomaly-segmenter

./: .gitignore  Dockerfile  JenkinsConstants.groovy  LICENSE  README.md  ai4-metadata.yml  cli.py  metadata.json  pyproject.toml  requirements.txt  setting_up_deployment.sh  tox.ini
.sqa/: config.yml  docker-compose.yml  dockerfile
api/: __init__.py  config.py  responses.py  schemas.py  utils.py
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: 1.0-thermal_anomaly_segmenter_start.ipynb
tests/: README.md  conftest.py  test_deepaas.py
tests/data/train/: KA1_DJI_0_0095_R.npy.lz4
tests/models/dummy/: epoch=0.ckpt  train_config.json
tests/test_metadata/: test_requirements.py
tests/test_predictions/: conftest.py  test_requirements.py
tests/test_training/: conftest.py  test_requirements.py
thermal_anomaly_segmenter/: README.md  __init__.py  config.py  prediction.py  training.py  utils.py
thermal_anomaly_segmenter/configurations/: train_segformer_b0.json  train_segformer_b1.json  train_segformer_b2.json  train_segformer_b3.json  train_segformer_b4.json  train_smp_deeplabV3plus.json  train_smp_pspnet.json  train_smp_unet.json
thermal_anomaly_segmenter/data/: augmentation.py  dataset.py  dataset_creation.py
thermal_anomaly_segmenter/models/: segformer_model.py  smp_model.py
